improve block selection to diffs & fix white spaces on the highlighted parts

--- a/diff2html.css
+++ b/diff2html.css
@@ -110,7 +110,6 @@
     margin-top: -1px;
     text-decoration: none;
     background-color: #ffb6ba;
-    font-weight: 700;
     border-radius: 0.2em;
 }
 
@@ -120,7 +119,6 @@
     margin-top: -1px;
     text-decoration: none;
     background-color: #97f295;
-    font-weight: 700;
     border-radius: 0.2em;
 }
 
